add_subdirectory(qlist)
add_subdirectory(qvarlengtharray)
add_subdirectory(qscopeguard)
add_subdirectory(qsharedpointer)
add_subdirectory(qbitarray)
add_subdirectory(qmap)
add_subdirectory(qpoint)
add_subdirectory(qpointf)
add_subdirectory(qsize)
add_subdirectory(qsizef)
add_subdirectory(qmargins)
add_subdirectory(qrect)
add_subdirectory(qhash)