PROJECT(TST_QSTRING)
ADD_EXECUTABLE(TST_QSTRING ${CMAKE_CURRENT_SOURCE_DIR}/tst_qstring.cpp)
TARGET_LINK_LIBRARIES(TST_QSTRING QtCore)
TARGET_LINK_LIBRARIES(TST_QSTRING QtTest)
TARGET_INCLUDE_DIRECTORIES(TST_QSTRING PUBLIC ${__qt6_root_src_path}/qtbase/include)
TARGET_INCLUDE_DIRECTORIES(TST_QSTRING PUBLIC ${__qt6_root_src_path}/qtbase/include/QtCore)
TARGET_INCLUDE_DIRECTORIES(TST_QSTRING PUBLIC ${__qt6_root_src_path}/qtbase/include/QtTest)

ADD_TEST(NAME tst_qstring_run1 COMMAND TST_QCHAR)

#没有返回值被当作错误处理
target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -Werror=return-type)